Magick.NET.Native/MagickImage.h


MAGICK_NET_EXPORT Image *MagickImage_Create(const ImageInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Dispose(Image *);


MAGICK_NET_EXPORT PixelInfo *MagickImage_AlphaColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AlphaColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT size_t MagickImage_AnimationDelay_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AnimationDelay_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_AnimationIterations_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AnimationIterations_Set(Image *, const size_t);


MAGICK_NET_EXPORT PixelInfo *MagickImage_BackgroundColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BackgroundColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT size_t MagickImage_BaseHeight_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_BaseWidth_Get(const Image *);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_BlackPointCompensation_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BlackPointCompensation_Set(Image *, MagickBooleanType);


MAGICK_NET_EXPORT PixelInfo *MagickImage_BorderColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BorderColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT RectangleInfo *MagickImage_BoundingBox_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ChannelCount_Get(const Image *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaBluePrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaBluePrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaGreenPrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaGreenPrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaRedPrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaRedPrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaWhitePoint_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaWhitePoint_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT Image *MagickImage_Shave(const Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Shear(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SigmoidalContrast(Image *, const MagickBooleanType, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SparseColor(Image *, const size_t, const size_t, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Spread(const Image *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Sketch(Image *, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Solarize(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Splice(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Statistic(const Image *, const size_t, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelStatistics *MagickImage_Statistics(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Stegano(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Stereo(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Strip(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SubImageSearch(Image *, const Image *, const size_t, const double, RectangleInfo *, double *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Swirl(const Image *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Texture(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Threshold(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Thumbnail(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Tint(const Image *, const char *, const PixelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Transparent(Image *, const PixelInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Transpose(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Transverse(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Trim(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_UniqueColors(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_UnsharpMask(Image *, const double, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Vignette(const Image *, const double, const double, const ssize_t, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Wave(const Image *, const size_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_WaveletDenoise(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_WhiteThreshold(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT unsigned char *MagickImage_WriteBlob(Image *, const ImageInfo *, size_t *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_WriteFile(Image *, const ImageInfo *, ExceptionInfo **);